3.0.0 Updated to Java 17